--- a/chrome-extension/saas.html
+++ b/chrome-extension/saas.html
@@ -42,7 +42,7 @@ vero.
 </div>
 
 <div class="notelix-enabled" style="margin: 20px; padding: 10px;background: #F2F2F2">
-    Notelix is enabled here.
+    <div style="color:green">Notelix is enabled here.</div>
     <br/>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales ligula elit, et consectetur arcu
     finibus sit amet. Suspendisse fringilla placerat faucibus. Ut vulputate varius ornare. Aliquam ut lacus urna. Proin
@@ -80,12 +80,12 @@ vero.
     interdum turpis porta vehicula at ac justo.
 </div>
 
-<div style="color: red;margin-top:20px">
+<div style="margin-top:20px">
     Notelix is not enabled here
 </div>
 
 <div class="notelix-enabled" style="margin: 20px; padding: 10px;background: #F2F2F2">
-    Notelix is enabled here.
+    <div style="color:green">Notelix is enabled here.</div>
     <br/>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius felis at aliquam condimentum. Mauris eget
     efficitur ante. Cras et leo rutrum, luctus dolor nec, placerat dolor. Ut ac diam ac sapien porta sollicitudin a
