--- a/chrome-extension/saas.html
+++ b/chrome-extension/saas.html
@@ -23,9 +23,9 @@
             // Subsequent calls with the same staticToken will authenticate the calls to that user.
             staticToken: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
 
-            // enablementCssClass is an optional CSS class name.
+            // rootElementCssClassName is an optional CSS class name.
             // If specified, notelix will only work in the children elements of the elements with the specified CSS class name.
-            enablementCssClass: "notelix-enabled"
+            rootElementCssClassName: "notelix-enabled"
         }
         window.addEventListener('load', function () {
             var script = document.createElement('script');
