improve App: show all annotations in a 3-column manner

--- a/chrome-extension/app.html
+++ b/chrome-extension/app.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<div id="root" style="width: 600px;padding: 20px"></div>
+<div id="root"></div>
 </body>
 
 <script src="./dist/app.dist.js"></script>
